# aa-permission-management

./: .coveragerc  .gitignore  .isort.cfg  .pylintrc  CHANGELOG.md  Makefile  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  tox.ini
.github/workflows/: automated-checks.yml
aa_permission_management/: __init__.py  apps.py  auth_hooks.py  constants.py  models.py  urls.py  views.py
aa_permission_management/helper/: views.py
aa_permission_management/locale/: django.pot
aa_permission_management/locale/cs/LC_MESSAGES/: django.mo  django.po
aa_permission_management/locale/de/LC_MESSAGES/: django.mo  django.po
aa_permission_management/locale/en/LC_MESSAGES/: django.po
aa_permission_management/locale/es/LC_MESSAGES/: django.mo  django.po
aa_permission_management/locale/fr/LC_MESSAGES/: django.mo  django.po
aa_permission_management/locale/it/LC_MESSAGES/: django.mo  django.po
aa_permission_management/locale/ja/LC_MESSAGES/: django.mo  django.po
aa_permission_management/locale/ko/LC_MESSAGES/: django.mo  django.po
aa_permission_management/locale/nl/LC_MESSAGES/: django.mo  django.po
aa_permission_management/locale/pl/LC_MESSAGES/: django.mo  django.po
aa_permission_management/locale/ru/LC_MESSAGES/: django.mo  django.po
aa_permission_management/locale/sk/LC_MESSAGES/: django.mo  django.po
aa_permission_management/locale/uk/LC_MESSAGES/: django.mo  django.po
aa_permission_management/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
aa_permission_management/migrations/: 0001_initial.py
aa_permission_management/providers/: applogger.py
aa_permission_management/static/aa_permission_management/css/: aa-permission-management.css  aa-permission-management.min.css  aa-permission-management.min.css.map
aa_permission_management/templates/aa_permission_management/: base.html
aa_permission_management/tests/: __init__.py  test_app_config.py  test_auth_hooks.py  test_helper_views.py  test_models.py  test_providers.py  test_views.py
aa_permission_management/tests/fixtures/: utils.py
testauth/settings/: local.py
(+22 files in other folders)
